fix recipe tiles to align more with desing, fix bug with cursor on recipe tile and modal popup, change styling in modal for better scaling with mobile view

--- a/src/styles/Recipes.css
+++ b/src/styles/Recipes.css
@@ -64,11 +64,12 @@
 	margin-top: 20px;
 }
 .app__recipes {
-	flex-wrap: wrap;
-	margin-top: 35px;
+	width: 100%;
 	display: flex;
-	justify-content: space-evenly;
-	align-items: baseline;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin: 50px auto;
+
 }
 .cookingpot {
 	width: 250px;
